[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = ""
authors = ["gejibin <gejb007@outlook.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "agent", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
pandas = "^2.2.3"
tdqm = "^0.0.1"
torchmetrics = "^1.7.1"
torchkeras = "^4.0.4"
ipython = "8.16.1"
matplotlib = "3.9.0"
tensorboard = "2.18.0"
jieba = "^0.42.1"
scikit-learn = "^1.7.0"
faiss-cpu = "^1.11.0"
langchain = "^0.3.25"
pypdf = "^5.6.0"
pypdf2 = "^3.0.1"
langchain-openai = "^0.3.24"
numpy = "2.1.0"
langchain-community = "^0.3.25"
zhipuai = "^2.1.5.20250611"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.3.0"
modelscope = "^1.27.1"
flagembedding = "^1.3.5"
qwen-agent = "^0.0.27"
json5 = "^0.12.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
streamlit = "^1.46.1"
tqdm = "^4.67.1"
huggingface-hub = {extras = ["hf-xet"], version = "^0.33.4"}
langchain-ollama = "^0.3.6"
opencv-python = "^4.12.0.88"
langchain-experimental = "^0.3.4"
wikipedia = "^1.4.0"
arxiv = "^2.2.0"
numexpr = "^2.11.0"
google-api-python-client = ">=2.100.0"
wolframalpha = "^5.1.3"
langchain-google-community = "^2.0.7"
ddgs = "^9.5.4"
duckduckgo-search = "^8.1.1"
pyowm = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
